fix: overflow av långa ord + storlek
Det verkade som att vid ungefär 356px bred viewport var typsnittet så pass stort att ord med 9+ bokstäver (välkommen) inte rymmdes.

Fixade också att att typsnittstorlek stämmer överens med figma

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -3,7 +3,8 @@
   src: url('/fonts/gill-sans.ttf') format('truetype');
 }
 
-  :root{
+:root{
+    font-size: 20px;
     --koggis-grön: #037D4F;
     --valla-grön: #16a654;
     --limejuice: #d1f2d5;
